GTK+-3.20 TraditionalOK: fix jumping list rowsKeep treeviews from jumping
separators drawn at 0 by default until hovered

--- a/desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets.css
@@ -201,6 +201,11 @@ statusbar frame button.flat {
     border-radius: 0;
 }
 
+/*Keep treeviews from jumping, separators drawn at 0 by default until hovered*/
+treeview.view.separator {
+    min-height: 2px;
+}
+
 treeview.view separator,
 treeview.view .separator, /* why ?*/
 treeview separator,
